# Rift

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Builder/: .gitignore  Makefile  README.md  module.build
Builder/inc/: module.h
Builder/include/: base.h  build.h  command.h  graph.h  module.h  order.h
Builder/src/: base.c  build.c  command.c  graph.c  main.c  module.c  order.c
Core/: CMakeLists.txt  pch.cpp  pch.h
Core/App/: Application.cpp  Application.h  EntryPoint.h
Core/Core/: Assert.h  Base.h
Core/Event/: Event.cpp  Event.h
Core/ImGUI/: ImGuiLayer.cpp  ImGuiLayer.h
Core/Input/: InputEvents.h  KeyEvents.h  MouseEvents.h
Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Core/Logger/: Log.cpp  Log.h
Core/Platform/GLFW/: ImGuiGLFWRenderer.cpp  ImGuiGLFWRenderer.h
Core/Platform/OpenGL/: ImGuiOpenGLLoader.h  ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h
Core/Platform/Win/: WinWindow.cpp  WinWindow.h
Core/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Core/Window/: Window.cpp  Window.h  WindowEvents.h
Engine/Core/: main.c  module.build
Engine/Module/: Test.c  Test.h  module.build
RiftCore/: CMakeLists.txt
RiftCore/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
RiftCore/utils/app/: Application.cpp  Application.h  EntryPoint.h
RiftCore/utils/log/: Logger.cpp  Logger.h
RiftEditor/: CMakeLists.txt
Sandbox/: CMakeLists.txt  SandboxApp.cpp  main.cpp
Script/Linux/: BuildCore.sh  BuildEditor.sh  BuildSandbox.sh  BuildThirdParty.sh  ConfigDebug.sh  ConfigRelease.sh
Script/Windows/: ConfigDebug.bat  ConfigRelease.bat
